# keeprule-pypi

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
keeprule/: __init__.py
keeprule/data/: principles.json
