[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "keeprule"
version = "1.0.0"
description = "Investment principles from Buffett, Munger & masters - curated by KeepRule.com"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
authors = [
    {name = "William Wang"}
]
keywords = [
    "investing",
    "buffett",
    "munger",
    "investment-principles",
    "value-investing",
    "finance",
    "quotes",
    "benjamin-graham",
    "peter-lynch",
    "stock-market",
    "wisdom"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://keeprule.com"
Repository = "https://github.com/henu-wang/keeprule-pypi"
Issues = "https://github.com/henu-wang/keeprule-pypi/issues"

[tool.setuptools.packages.find]
include = ["keeprule*"]

[tool.setuptools.package-data]
keeprule = ["data/*.json"]
